--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.hw.and.frament0"
+    package="jp.hw.and.fragment0"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,7 +11,7 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name="jp.hw.and.frament0.FragmentEx" >
+            android:name="jp.hw.and.fragment0.FragmentEx" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,7 +19,7 @@
         </activity>
         <activity
             android:label="DetailActivity"
-            android:name="jp.hw.and.frament0.DetailActivity" >
+            android:name="jp.hw.and.fragment0.DetailActivity" >
         </activity>
     </application>
 
